# uaup-rs

./: Cargo.toml
examples/manifest_example/: Cargo.toml
uaup-cli/: Cargo.toml  uaup.ignore  uaup.toml
uaup-cli/src/: main.rs  uaup_cli_args.rs
uaup-core-lib/: Cargo.toml
uaup-core-lib/src/: lib.rs  manifest.rs  manifest_server.rs  update_server.rs
uaup-core-lib/src/manifest/: manifest.rs  manifest_data.rs  update_server.rs
uaup-server/: Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
