[package]
name = "uaup-rs"
version = "0.0.0"
edition = "2021"


[dependencies]
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
actix = { version = "0.13.5", optional = true }
actix-web = { version = "4.9.0", optional = true }
serde_json = { version = "1.0.132", optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }
futures-util = "0.3.31"
env_logger = "0.11.5"



[features]
github = []

# Custom Manifest Files
manifest = []
generate_manifest = ["manifest", "dep:serde_json", "dep:serde"]
manifest_server = ["manifest", "dep:actix", "dep:actix-web", "dep:serde_json", "dep:serde"]