[package]
name = "uaup-rs"
version = "0.0.0"
edition = "2021"


[dependencies]
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
actix = { version = "0.13.5", optional = true }
actix-web = { version = "4.9.0", optional = true }
serde_json = { version = "1.0.132", optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }
futures-util = "0.3.31"
env_logger = "0.11.5"
sha2 = { version = "0.11.0-pre.4", optional = true }
base16ct = { version = "0.2.0", optional = true, features = ["alloc"] }
chrono = { version = "0.4.38", optional = true, features = ["alloc", "serde", "clock", "now"] }
lzma_tarball = { version = "0.0.4", features = ["log", "compression", "decompression"] }



[features]
github = []

# Custom Manifest Files
manifest = []
create = ["manifest", "dep:serde_json", "dep:serde", "dep:sha2", "dep:base16ct", "dep:chrono"]
update_server = ["manifest", "dep:actix", "dep:actix-web", "dep:serde_json", "dep:serde"]